--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
 <h1>Version Control System</h1>
 <p>
 What is Version Control System: A version control system, or VCS, tracks the history of changes as people and teams collaborate on projects together. As developers make changes to the project, any earlier version of the project can be recovered at any time.
+
+We have colloborated towards acheiveing specific terms and we are using Git. 
 </p>
 
 </body>
